# presentation-app

./: initial.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: FileActions.tsx  left-sidebar.tsx  text-editor.tsx  top-bar.tsx
src/initial/: initialApp.tsx  initialMain.tsx
